# SoftDevChallenges

./: README.md
Dev/dev1/: Makefile  README.txt  dev1
Dev/dev2/: README.txt  gdb.py  public  public.c
Dev/dev3/project/: Makefile.in  clean.sh  config.h.in  configure  configure.ac  configure.scan
Dev/dev3/project/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
Dev/dev3/project/src/: Makefile.am  Makefile.in
Dev/dev3/project/src/lib_foo/: Makefile.am  Makefile.in
Dev/dev3/project/src/main/: Makefile.am  Makefile.in
Python/python1/: README  python1.py
Python/python2/: README.txt  SECRET  python2.py
Python/python3/: README.txt  map1  numbers  python3.py
Shell/shell1/: shell1.sh
Shell/shell2/: README  shell2.sh
Shell/shell3/: README.txt  maze.sh  shell3.sh
Shell/shell3/maze/: shell3.sh
Shell/shell3/maze/dirA/: dirE.tgz
Shell/shell3/maze/dirB/: dirF.tgz
